@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-10T08:07:24Z",
+  "timestamp" : "2022-06-10T16:07:00Z",
   "count_outdated" : 384,
   "uniques_outdated" : 81,
-  "count" : 393,
-  "uniques" : 87,
+  "count" : 394,
+  "uniques" : 88,
   "views" : [
     {
       "timestamp": "2022-06-06T00:00:00Z",
@@ -35,10 +35,10 @@
     },
     {
       "timestamp": "2022-06-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
