@@ -1,6 +1,6 @@
 {
-  "count": 9,
-  "uniques": 4,
+  "count": 10,
+  "uniques": 5,
   "views": [
     {
       "timestamp": "2022-06-06T00:00:00Z",
@@ -24,8 +24,8 @@
     },
     {
       "timestamp": "2022-06-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
