@@ -1,3 +1,10 @@
+2022-06-10T16:07:00Z:
+* notice: last 14d: unq all: 5 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 81 384 / 87 393
+* notice: next accum: outdated-unq outdated-all / unq all: 81 384 / 88 394
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-06-10]
+
 2022-06-10T08:07:24Z:
 * notice: last 14d: unq all: 4 9
 * notice: prev accum: outdated-unq outdated-all / unq all: 81 384 / 86 392
